<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TablesActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTablesBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="btn"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvTablesLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_weight="1"
        android:fontFamily="@font/boston_heavy_it"
        android:text="@string/tv_logo"
        android:textColor="@color/red"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnTableRoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_roles"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_users"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableCustomers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_customers"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableOrders"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_Orders"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableOrdersProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_orders_products"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnTableProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/boston_bold"
            android:text="@string/btn_table_products"
            android:textSize="18sp"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>