<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrdersRedActivity">

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Заказ №101"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edTextRegDate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/hint_registration_date"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />

            <EditText
                android:id="@+id/edTextDelDate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:hint="@string/hint_delivery_date"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edTextCustomerDisplay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="Клиент не выбран"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none"
                />
            <Button
                android:id="@+id/btnSelectCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Выбрать"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvProductsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Товары в заказе:"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcProductsInOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvProductsLabel"
        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/product_in_order_item"/>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvFinallyCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            tools:text="Итого: 1500.50"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddProduct"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/boston_bold"
                android:text="@string/btn_add_product"
                android:textSize="18sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnSaveOrder"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/boston_bold"
                android:text="@string/btn_save"
                android:textSize="18sp"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>